force-app/main/default/objects/APT_DoV_Language__c/APT_DoV_Language__c.object-meta.xml
<CustomObject>
    <label>DoV Language</label>
    <nameField>
        <displayFormat>DoV-L-{YYYY}-{MM}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DoV Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>