force-app/main/default/objects/APT_DoV_Language__c/fields/APT_Contract__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>DoV Languages</relationshipLabel>
    <relationshipName>DoV_Languages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>