force-app/main/default/objects/APT_DoV_Language__c/fields/APT_DoV_Action__c.field-meta.xml
<CustomField>
    <fullName>APT_DoV_Action__c</fullName>
    <label>DoV Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>APT_DOV_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Add New Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>