force-app/main/default/objects/APT_DoV_Language__c/fields/APT_DoV_Details__c.field-meta.xml
<CustomField>
    <fullName>APT_DoV_Details__c</fullName>
    <label>DoV Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As detailed below</fullName>
                <default>true</default>
                <label>As detailed below</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>