force-app/main/default/objects/APT_DoV_Language__c/fields/APT_DoV_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_DoV_Product__c</fullName>
    <description>.</description>
    <label>DoV Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>APT_DoV_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Express eParcel</fullName>
            </value>
            <value>
                <fullName>eParcel</fullName>
            </value>
            <value>
                <fullName>Parcel Post</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Letters</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
                <label>Returns Packaging</label>
            </value>
            <value>
                <fullName>UMS</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Print Post</fullName>
            </value>
            <value>
                <fullName>Post Billpay</fullName>
            </value>
            <value>
                <fullName>SecurePay Online Payments</fullName>
            </value>
            <value>
                <fullName>Other product</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Local Pickup and Delivery Services</fullName>
            </value>
            <value>
                <fullName>StarTrack</fullName>
            </value>
            <value>
                <fullName>ST Additional Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>