force-app/main/default/objects/APT_DoV_Language__c/fields/APT_DOV_Reason__c.field-meta.xml
<CustomField>
    <fullName>APT_DOV_Reason__c</fullName>
    <label>DOV Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update products/rates</fullName>
            </value>
            <value>
                <fullName>Add new products</fullName>
            </value>
            <value>
                <fullName>Update Collection Point (Local Pud)</fullName>
            </value>
            <value>
                <fullName>Migration request (ie. PPS to TEAM)</fullName>
            </value>
            <value>
                <fullName>Update lanes to existing zones</fullName>
            </value>
            <value>
                <fullName>Replace lanes</fullName>
            </value>
            <value>
                <fullName>Remove Product</fullName>
            </value>
            <value>
                <fullName>Multi-year Contract Review/Price Change</fullName>
            </value>
            <value>
                <fullName>APR Contract Review/Price Change</fullName>
            </value>
            <value>
                <fullName>Contract Review or Price Change</fullName>
                <isActive>false</isActive>
                <label>Contract Review or Price Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>