force-app/main/default/objects/APT_DoV_Language__c/fields/APT_DoV_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_DoV_Type__c</fullName>
    <inlineHelpText>Select the type of the DoV you are working on to have appropriate set of options</inlineHelpText>
    <label>DoV Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open Ended</fullName>
            </value>
            <value>
                <fullName>Fixed Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>