force-app/main/default/objects/APT_DoV_Language__c/validationRules/DoV_Type_and_Contract_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>DoV_Type_and_Contract_Condition</fullName>
    <active>true</active>
    <description>Check if DoV Type is equal to Contract Condition.</description>
    <errorConditionFormula>TEXT(APT_DoV_Type__c) !=  TEXT(APT_Contract__r.Term__c)</errorConditionFormula>
    <errorDisplayField>APT_DoV_Type__c</errorDisplayField>
    <errorMessage>DoV Type should be equal to Contract Condition.</errorMessage>
</ValidationRule>